<resources>
    <string name="app_name">مُصحفى</string>
    <string name="elmoshf">المصحف</string>
    <string name="moshaf">المصحف</string>
    <string name="page_picker">اختر صفحة</string>
    <string name="bookmark">إضافة علامة</string>
    <string name="bookmarks_list">العلامات</string>
    <string name="page_indicator_format">صفحة %1$d / %2$d</string>
    <string name="bookmark_added">تمت إضافة العلامة</string>
    <string name="bookmark_removed">تمت إزالة العلامة</string>
    <string name="download_progress_format">جاري التحميل: %1$d / %2$d</string>
    <string name="mushaf_preparing_offline_title">يتم تجهيز المصحف للاستخدام بدون اتصال</string>
    <string name="mushaf_download_pages_format">%1$d / %2$d</string>
    <string name="mushaf_download_percent_format">%d%%</string>
    <string name="mushaf_loading_page">جاري تحميل الصفحة…</string>
    <string name="no_bookmarks">لا توجد علامات</string>
    <string name="mushaf_settings">اعدادات المصحف</string>
    <string name="surahs">السور</string>
    <string name="surahs_dialog_title">اختر السورة</string>
    <string name="surahs_loading">جاري تحميل السور...</string>
    <string name="surahs_loading_failed">تعذر تحميل السور. حاول مرة أخرى</string>
    <string name="quranEnglish">القرأن</string>
    <string name="textProgress">انتظر يبدأ التحميل الان</string>
    <string name="search">Search</string>
    <string name="iconReciters">التلاوات</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_azkar_tap">AzkarTapActivity</string>
    <string name="tab_text_1">الأذكار مكتوبة</string>
    <string name="tab_text_2">الأذكار مسموعة</string>
    <string name="tafseerIcon">تفسير القرأن</string>
    <string name="zero_for_sebha">تصفير كل العدادات</string>
    <string name="start_sebha">ابدأ التسبيح</string>
    <string name="add_sebha_to_start_sebha">ضيف سبحة لبدأ التسبيح</string>
    <string name="sure">تأكيد</string>
    <string name="cancel">الغاء</string>
    <string name="are_you_sure_to_delete_sebha">هل انت متأكد من مسح السبحة؟</string>
    <string name="are_you_sure_to_set_sum_zero">هل انت متأكد من تصفير كل العدادات؟</string>
    <string name="text_about_app">تطبيق مُصحفى هو تطبيق دينى يحتوى على أربع أقسام رئيسية:\n\n
المصحف:\n
يحتوى على مصحف المدينة (حفص)، ويمكنك إضافة علامة والرجوع إليها بسهولة، والتنقل بسلاسة بين السور والصفحات.\n\n
القرآن:\n
وهو يحتوى على ايات القرآن وترجمتها بالإنجليزية عند اختيار السورة المراد قراءتها ويمكنك مشاركة اى اية.\n\n
التلاوات:\n
وهو يحتوى على أكثر من 200 قارئ بمختلف التلاوات وإمكانية البحث باسم القارئ أو التلاوة، ثم اختيار السورة المراد سماعها مع إمكانية تحميل السورة من زر أسفل يمين الشاشة.\n\n
تفسير القرآن:\n
يحتوى على مجموعة كبيرة من التفاسير منها العربية والإنجليزية، مع اختيار السورة ثم الضغط على الآية المراد تفسيرها.\n\n
ملحوظة:\n
التطبيق يعمل بالإنترنت، ولكن أى محتوى يتم فتحه لأول مرة يمكن بعد ذلك فتحه بدون إنترنت.</string>
    <string name="about_app">عن التطبيق</string>
    <string name="ramadans">رمضانيات</string>
    <string name="sera_nabawya">السيرة النبوية</string>
    <string name="sebha">السبحة</string>
    <string name="azkar">الأذكار</string>
    <string name="life_prophet">حياة الرسول صلى الله عليه وسلم</string>
    <string name="wife_prophet">سيرة زوجات وأولاد الرسول صلى الله عليه وسلم</string>
    <string name="ghazwa_prophet">غزوات الرسول صلى الله عليه وسلم</string>
    <string name="about_prophet">نبذة عن حياة الرسول صلى الله عليه وسلم</string>
    <string name="rules_ramadan">أحكام وفتاوى رمضان المبارك</string>
    <string name="doaa_ramadan">أدعية لشهر رمضان المبارك</string>
    <string name="health_ramadan">صحتك في شهر رمضان المبارك</string>
    <string name="finish_quran_ramadan">طرق ختم القران الكريم في رمضان</string>
    <string name="adivce_ramadan">نصائح لشهر رمضان المبارك</string>


    <string-array name="spinner_string_array">
        <item>اختار الصيغة</item>
    </string-array>
</resources>