<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".mushaf.presentation.MushafReaderActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="?attr/colorPrimaryVariant">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/moshaf"
            app:titleTextColor="@color/white"
            app:navigationIcon="@drawable/ic_close" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/download_progress_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center_horizontal"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="vertical"
                android:gravity="center"
                android:visibility="gone">

                <ProgressBar
                    android:id="@+id/progress_download"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:indeterminate="true" />

                <TextView
                    android:id="@+id/tv_download_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    tools:text="جاري التحميل: 50 / 604" />

            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/tv_mushaf_settings_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_mushaf_settings"
                android:gravity="center"
                android:paddingBottom="@dimen/_22sdp"
                android:paddingTop="@dimen/_10dp"
                android:text="@string/mushaf_settings"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                android:fontFamily="@font/font_app" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/setting_mushaf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_12sdp"
            android:background="?attr/colorPrimaryVariant"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_page_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/_8sdp"
                android:background="@drawable/rounded"
                android:paddingHorizontal="@dimen/_16sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14sdp"
                tools:text="صفحة 1 / 604" />
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                >

                <LinearLayout
                    android:id="@+id/buttons_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    android:layout_marginBottom="@dimen/_13sdp"
                    android:gravity="center">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_page_picker"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/page_picker"
                        android:textColor="@color/white"

                        app:cornerRadius="@dimen/_10sdp"
                        app:strokeWidth="0dp"
                        android:backgroundTint="@color/purple_500"
                        android:layout_marginEnd="@dimen/_8sdp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_bookmark"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/bookmark"
                        android:textColor="@color/white"
                        app:cornerRadius="@dimen/_10sdp"
                        app:strokeWidth="0dp"
                        android:backgroundTint="@color/purple_500"
                        android:layout_marginEnd="@dimen/_8sdp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_bookmarks_list"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bookmarks_list"
                        android:textColor="@color/white"
                        app:cornerRadius="@dimen/_10sdp"
                        app:strokeWidth="0dp"
                        android:backgroundTint="@color/purple_500"
                        android:layout_marginEnd="@dimen/_8sdp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_surahs"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        app:cornerRadius="@dimen/_10sdp"
                        app:strokeWidth="0dp"
                        android:backgroundTint="@color/purple_500"
                        android:text="@string/surahs" />

                </LinearLayout>

            </HorizontalScrollView>

        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
