<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/white"

            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_title_choosing_dialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    >

                    <TextView
                        android:id="@+id/dialog_delete_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/are_you_sure_to_delete_sebha"
                        android:textSize="20dp"
                        android:gravity="center"
                        android:textColor="@color/black"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/layout_title_choosing_dialog"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="25dp"
                    >


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/dialog_delete_btn1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.Material3.Button.OutlinedButton"
                        android:text="@string/cancel"
                        android:textSize="18dp"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        app:strokeColor="@color/purple_700"
                        app:cornerRadius="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="30dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/dialog_delete_btn2"
                        />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/dialog_delete_btn2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Widget.Material3.Button.OutlinedButton"
                        app:strokeColor="@color/purple_700"
                        app:cornerRadius="10dp"
                        android:text="@string/sure"
                        android:textSize="18dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="30dp"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="@+id/dialog_choose_txt_btn1"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/dialog_choose_txt_btn1"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>







        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>